# libzinc

./: .gitignore  default.nix  meson.build  todo.txt
libzinc/: AABB.hh  util.hh
test/: cairo-test.cc
